tests/NormalTests/paczka1/small_fuzzy/57862121.err
Error in line 5: wiAXv S258 105,03
Error in line 2: wiAXv S25	 46,6
Error in line 4: tkMQLlhELZ A564 77,3
